# vulkan

./: .gitmodules  Build.bat  CMakeLists.txt  CompileShaders.bat  Main.cpp  Readme.md  Startup.bat
ext/assimp/lib/: IrrXML.lib  assimp-vc141-mt.lib  zlibstatic.lib
ext/glfw/lib/: glfw3.lib
resources/shaders/: BuildBRDFLUT.frag  BuildBRDFLUT.frag.spv  BuildBRDFLUT.vert  BuildBRDFLUT.vert.spv  BuildCubemap.frag  BuildCubemap.frag.spv  BuildCubemap.vert  BuildCubemap.vert.spv  BuildIrradianceMap.frag  BuildIrradianceMap.frag.spv  BuildIrradianceMap.vert  BuildIrradianceMap.vert.spv  BuildPrefilterEnvMap.frag  BuildPrefilterEnvMap.frag.spv  BuildPrefilterEnvMap.vert  BuildPrefilterEnvMap.vert.spv  IBL.glsl  Material.glsl  MaterialDeferred.glsl  MaterialForward.glsl  ObjectPicker.frag  ObjectPicker.vert  SceneUBO.glsl  Tonemapping.glsl  composition.frag  composition.frag.spv  composition.vert  composition.vert.spv  cubemap.frag  cubemap.frag.spv  cubemap.vert  cubemap.vert.spv  debug.vert  forward.frag  forward.frag.spv  forward.vert  forward.vert.spv  hybrid.frag  hybrid.vert  hybridComposition.frag  (+12 more)
resources/shaders/Common/: Common.glsl  Defines.glsl  IBL.glsl  SceneUBO.glsl  geometry.glsl  geometryTypes.glsl  random.glsl  raypayload.glsl  ubo.glsl
resources/shaders/rtx/: BRDF.glsl  anyhit.rahit  anyhit.rahit.spv  closesthit.rchit  closesthit.rchit.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv
resources/shaders/rtx/Common/: geometry.glsl  geometryTypes.glsl  material.glsl  random.glsl  raypayload.glsl  ubo.glsl
resources/shaders/spv/: BuildCubemap.frag.spv  BuildCubemap.vert.spv  ObjectPicker.frag.spv  ObjectPicker.vert.spv  anyhit.rahit.spv  blur.frag.spv  closesthit.rchit.spv  composition.frag.spv  composition.vert.spv  cubemap.frag.spv  cubemap.vert.spv  forward.frag.spv  forward.vert.spv  fullscreen.vert.spv  hybrid.frag.spv  hybrid.vert.spv  hybridComposition.frag.spv  hybridGBuffer.frag.spv  miss.rmiss.spv  missShadow.rmiss.spv  mrt.frag.spv  mrt.vert.spv  pathTraceCompute.frag.spv  pathTracePreview.comp.spv  rayTracedShadows.comp.spv  rayTracedShadows.frag.spv  raygen.rgen.spv  ssao.frag.spv  svgfReprojection.comp.spv  svgfVariance.comp.spv
src/: App.cpp  App.h  AssimpImporter.cpp  AssimpImporter.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Debug.cpp  Debug.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GLTFImporter.cpp  GLTFImporter.h  IBLHelper.h  Image.cpp  Image.h  ImguiHelper.cpp  ImguiHelper.h  Mesh.h  ObjectPicker.cpp  ObjectPicker.h  RayTracingHelper.cpp  RayTracingHelper.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Save.cpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Swapchain.h  TextureLoader.cpp  TextureLoader.h  ThreadPool.cpp  ThreadPool.h  (+5 more)
src/Renderers/: DeferredHybridRenderer.cpp  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  HybridRenderer.cpp  HybridRenderer.h  PathTraceCPURenderer.cpp  PathTraceCPURenderer.h  PathTraceComputeRenderer.cpp  PathTraceComputeRenderer.h  PathTraceRTXRenderer.cpp  PathTraceRTXRenderer.h  RasterizerRenderer.cpp  RasterizerRenderer.h  brdf.cpp  brdf.h
